sidebar overlapping on the body corrected

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -26,3 +26,9 @@ html {
 .home {
   min-height: calc(100vh - 64px)
 }
+
+@media only screen and (max-width: 1024px) {
+  .home {
+    margin-left: 3.6rem;
+  }
+}
