--- a/src/assets/css/topbar.css
+++ b/src/assets/css/topbar.css
@@ -14,14 +14,28 @@
   right: 65px;
 }
 
+.sidebar-mobile {
+  z-index: 1;
+}
 
 .page {
   width: 100%;
   height: 100%;
 }
 
+/*
+.content {
+  width: calc(100% - 500px);
+  margin-left: auto;
+  padding: 15px;
+  height: 100%;
+  word-break: break-word;
+}
+*/
+
 .sidebar {
-  position: sticky;
+  
+  position: fixed;
   top: 0;
   width: 60px;
   height: 100vh;
